--- a/.github/workflows/ci-latest-version.yml
+++ b/.github/workflows/ci-latest-version.yml
@@ -41,17 +41,17 @@ jobs:
       - name: Build
         run: ./gradlew build
 
-      - name: Quality Gate
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew --no-daemon --stacktrace multiplatformCoverage jvmCoverage sonarqube --info
+      #- name: Quality Gate
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #  run: ./gradlew --no-daemon --stacktrace multiplatformCoverage jvmCoverage sonarqube --info
 
-      - name: Publish documentation
-        env:
-          GRGIT_USER: ${{ github.actor }}
-          GRGIT_PASS: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew --no-daemon --stacktrace mkdocsPublish
+      # - name: Publish documentation
+      #  env:
+      #    GRGIT_USER: ${{ github.actor }}
+      #    GRGIT_PASS: ${{ secrets.GITHUB_TOKEN }}
+      #  run: ./gradlew --no-daemon --stacktrace mkdocsPublish
 
-      - name: Publish to Snapshot Repository
-        run: ./gradlew publishSnapshot --stacktrace --no-parallel
+      # - name: Publish to Snapshot Repository
+      #  run: ./gradlew publishSnapshot --stacktrace --no-parallel
