--- a/.github/workflows/ci-pull-request-validation.yml
+++ b/.github/workflows/ci-pull-request-validation.yml
@@ -14,20 +14,20 @@ on:
 
 jobs:
   build-linux:
-    uses: bitpogo/workflows/.github/workflows/shared-build-linux.yml@v1.0.0
+    uses: bitpogo/workflows/.github/workflows/shared-build-linux.yml@main
     concurrency:
       group: build-linux-${{ github.workflow }}-${{ github.head_ref }}
       cancel-in-progress: true
 
   build-macos:
-    uses: bitpogo/workflows/.github/workflows/shared-build-macos.yml@v1.0.0
+    uses: bitpogo/workflows/.github/workflows/shared-build-macos.yml@main
     concurrency:
       group: build-macos
       cancel-in-progress: true
 
   coding-conventions:
     needs: build-linux
-    uses: bitpogo/workflows/.github/workflows/shared-coding-conventions-linux.yml@v1.0.0
+    uses: bitpogo/workflows/.github/workflows/shared-coding-conventions-linux.yml@main
     with:
       cache-reports: true
       detekt: false
@@ -51,7 +51,7 @@ jobs:
 
   coverage:
     needs: [ coding-conventions ] #, check-android ]
-    uses: bitpogo/workflows/.github/workflows/shared-coverage-linux.yml@v1.0.0
+    uses: bitpogo/workflows/.github/workflows/shared-coverage-linux.yml@main
     with:
       kmp: true
       verify-kmp: false
@@ -66,7 +66,7 @@ jobs:
 
   check:
     needs: [ build-macos, build-linux ]
-    uses: bitpogo/workflows/.github/workflows/shared-test-kmp.yml@v1.0.0
+    uses: bitpogo/workflows/.github/workflows/shared-test-kmp.yml@main
     with:
       platforms: "['ios', 'macos', 'tvos', 'watchos', 'linux-js', 'mingw']"
     concurrency:
@@ -75,7 +75,7 @@ jobs:
 
   # publish:
   #  needs: [ coverage, check ]
-  #  uses: bitpogo/workflows/.github/workflows/shared-publish-pull-request.yml@v1.0.0
+  #  uses: bitpogo/workflows/.github/workflows/shared-publish-pull-request.yml@main
   #  with:
   #    uses-mips: true
   #  secrets:
